--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/svg+xml" href="Logo.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Human Robotics</title>
         <meta name="description" content="Robôs Inteligentes e Autônomos." />
