--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
     <head>
+        <!-- Google Tag Manager -->
+        <script>
+            (function (w, d, s, l, i) {
+                w[l] = w[l] || [];
+                w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+                var f = d.getElementsByTagName(s)[0],
+                    j = d.createElement(s),
+                    dl = l != "dataLayer" ? "&l=" + l : "";
+                j.async = true;
+                j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+                f.parentNode.insertBefore(j, f);
+            })(window, document, "script", "dataLayer", "GTM-NTZBH6XC");
+        </script>
+        <!-- End Google Tag Manager -->
+
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="Logo.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,6 +24,17 @@
         <meta name="keywords" content="robo, robotica, inteligencia artificial, atendimento, automação, inspeção" />
     </head>
     <body>
+        <!-- Google Tag Manager (noscript) -->
+        <noscript
+            ><iframe
+                src="https://www.googletagmanager.com/ns.html?id=GTM-NTZBH6XC"
+                height="0"
+                width="0"
+                style="display: none; visibility: hidden"
+            ></iframe
+        ></noscript>
+        <!-- End Google Tag Manager (noscript) -->
+
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
         <script>
