--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@
         </script>
         <!-- End Google Tag Manager -->
 
+        <!-- Hotjar Tracking Code for Human Robotics Final -->
+        <script>
+            (function (h, o, t, j, a, r) {
+                h.hj =
+                    h.hj ||
+                    function () {
+                        (h.hj.q = h.hj.q || []).push(arguments);
+                    };
+                h._hjSettings = { hjid: 3622004, hjsv: 6 };
+                a = o.getElementsByTagName("head")[0];
+                r = o.createElement("script");
+                r.async = 1;
+                r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+                a.appendChild(r);
+            })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+        </script>
+
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="Logo.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
